[tool.poetry]
name = "airflow-playground"
version = "0.1.0"
description = ""
authors = ["Pritish Jadhav"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
apache-airflow = "*"
pandas = "*"
numpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
